<resources>
    <string name="app_name">GroupleSync</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Имя пользователя или email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Неверный логин и/или пароль</string>
    <string name="error_field_required">Это поле не может быть пустым</string>
    <string name="select_all">Выделить все</string>
    <string name="select_unreaded">Выделить непрочитанные</string>
    <string name="mark_as_readed">Пометить как прочитанное</string>
    <string name="download_selected">Скачать выбранные</string>
    <string name="delete_selected">Удалить выбранные</string>
    <string name="page__">Страница: —</string>
    <string name="rotate_screen">Повернуть экран</string>
    <string name="hentaichan_brow">Hentaichan браузер</string>
    <string name="sort_reverse">Сортировать в обратном порядке</string>
    <string name="sync">Синхронизация</string>
    <string name="check_new">Проверка новых глав</string>
    <string name="logout">Выйти</string>
    <string name="clear_table">Очистить таблицу</string>
    <string name="planed">Запланированные закладки</string>
</resources>
