<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_above="@id/scroll"
    android:layout_alignWithParentIfMissing="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/chaptersRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chaptersList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:clickable="true"
        android:layout_margin="16dp"
        android:src="@drawable/arrow_down"
        android:focusable="true" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>


    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fillViewport="true"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/selectAll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/select_all"
                android:theme="@style/Button"
                android:visibility="visible"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/selectUnread"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/select_unreaded"
                android:theme="@style/Button"
                android:visibility="visible"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/makeReaded"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mark_as_readed"
                android:theme="@style/Button"
                android:visibility="visible"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/downloadSelected"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/download_selected"
                android:theme="@style/Button"
                android:visibility="visible"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/deleteSelected"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete_selected"
                android:theme="@style/Button"
                android:visibility="visible"
                tools:ignore="ButtonStyle" />


        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>